[package]

name = "trie"
version = "0.2.0"
license = "MIT/Apache-2.0"
description = "An ordered map and set based on a trie."

authors = [
    "Alexis Beingessner <a.beingessner@gmail.com>",
    "Andrew Paseltiner <apaseltiner@gmail.com>",
]

repository = "https://github.com/contain-rs/trie"
homepage = "https://github.com/contain-rs/trie"
documentation = "https://contain-rs.github.io/trie/trie"
keywords = ["data-structures"]
readme = "README.md"

[features]

default = ["ordered_iter"]

[dependencies.ordered_iter]

optional = true
version = "0.1"

[dev-dependencies]

rand = "0.4.2"
